PRO-0004 Fix alignment of CSS Emoji
* changed the vertical align of it.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@ html {
     background-color: #fff8e5;
     font-size: 16px;
 }
+.em {
+    vertical-align: bottom;
+}
 .container {
     background-image: url("../img/git-logo.png");
     background-repeat: no-repeat;
